# usu-optt-forms

./: .env.example  .gitignore  404.html  README.md  deploy.py  generateZip.py  index.html  mkdocs.yml  package-lock.json  package.json  prepareDist.py  pyproject.toml  requirements.txt  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
app/: __init__.py  config.py  helpers.py  index.html  models.py
app/routes/: base.py
app/rubrics/: OPTTChecklist.json  STData.json  STRubric.json  bTo5Practicum.json  cooperatingTeacherChecklist.json  formativeEvaluation.json  index.ts  mathRubric.json  notebookChecks.json  practicumChecklist.json  readingRubric.json  selfEvaluation.json  severePracticum.json  studentTeaching.json  studentTeachingRubric.json  teacherCandidate.json
app/rubrics/birthToFive/: batelle.json  battelle.json  birthToFive.json  cooperatingProviderChecklist.json  (+2 more)
app/static/: googlefonts.css  style.css
app/templates/: index.html
app/webpack/: App.tsx  FormData.ts  PDFGenerator.ts  app.tsx  currentForm.ts  defaultData.tsx  defaults.tsx  hooks.tsx  index.tsx  migrations.ts  store.ts  timerUtils.ts  types.tsx  utils.ts
docs/: index.md  notes.md  rubrics.md  stateManagement.md  tools.md
notes/: index.html
rubrics/: index.html
search/: search_index.json
site/: 404.html  index.html
site/notes/: index.html
site/rubrics/: index.html
site/search/: search_index.json
site/stateManagement/: index.html
site/tools/: index.html
stateManagement/: index.html
tools/: index.html
zipStructure/: ObservationForm.html
(+166 files in other folders)
