[tool.poetry]
name = "specialforms"
version = "0.1.0"
description = ""
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
Flask-Migrate = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
mypy = "^0.902"
python-dotenv = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
